styles.css
@import url("/fonts/fonts.css");

:root {
  --off-black: #323232;
  /* --off-red: #ef0000; */
  --off-white: #faf9f6;
  --azure: #017fc0;
  /* --off-white:  #FDFCFA; */
  /* --off-white:  #FEFDFB; */
  /* --off-white:  #FEFDFC; */

  --font: "Noto Sans", sans-serif;
  --font-regular-weight: 400;
  --font-bold-weight: 700;
  --monospace-font: "Source Code Pro", monospace;
  --monospace-font-weight: 400;
}

header,
body {
  font-family: var(--font);
}

/* Light Mode Styles */
@media (prefers-color-scheme: light) {
  header,
  body {
    background-color: white;
    color: black;
  }
}

/* Dark Mode Styles */
@media (prefers-color-scheme: dark) {
  header,
  body {
    background-color: var(--off-black);
    color: var(--off-white);
  }
}

img {
  border-radius: 50%;
}

.center {
  margin-top: 2em;
  text-align: center;
}

/* padding between list elements */
li {
  margin: 0.5em;
}

.tab-space {
  display: inline-block;
  width: 1em;
}

/* Navigation bar */

nav {
  position: sticky; /* Makes the nav bar sticky */
  position: -webkit-sticky;
  top: 0; /* Sticks the navbar to the top of the viewport */
  height: 4.5rem;
  z-index: 1000; /* Ensures the navbar stays on top of other content */
  width: 100%; /* Ensures the navbar takes the full width */
  background-color: white;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  text-align: center;
  /* Center the items when they wrap */
}

nav li {
  display: inline-block;
  /* This makes the items sit next to each other */
  margin: 0 10px;
}

nav li a {
  display: block;
  padding: 20px 0px;
  text-decoration: none;
  transition: all 0.25s ease;
}

/* Styles for the active nav link */
nav ul li a.active {
  text-decoration: underline;
}

nav li a:hover {
  /* color: var(--off-red); */
  text-decoration: underline;
}

/* Links */
/* Style for regular links */
a {
  color: inherit;
  /* This will make the link inherit the color of its parent. You can also set a specific color if desired, e.g., black. */
  text-decoration: underline;
  transition: color 0.25s ease;
  /* Optional: smooth color transition */
}

/* Style for link hover state */
a:hover {
  color: var(--azure);
}

/* Divider between links and social icons */
.divider {
  border-left: 1px solid #ddd; /* Divider style */
  height: 24px;
  margin: 0 1rem; /* Space around the divider */
}

/* Button */
/* Base button styles */
.button {
  display: inline-block;
  background-color: var(--off-black);
  color: var(--off-white);
  padding: 10px 20px;
  /* Adjust for desired button size */
  border: none;
  cursor: pointer;
  font-weight: bold;
  transition: all 0.25s ease;
  text-align: center;
  text-decoration: none;
  /* In case you use this class with an anchor */
}

/* Hover state for the button */
.button:hover {
  color: var(--off-red);
  background-color: var(--off-black);
}

.social-icons {
  font-size: 1.5rem;
  text-decoration: none;
}

/* Styling for the name */
.logo {
  font-size: 1.5rem;
  font-weight: bold;
}

/* Container for article content */
article {
  max-width: 70ch; /* Approximate line length of 80 characters */
  margin: 0 auto; /* Center the content horizontally */
  /* padding: 1rem; */
  line-height: 1.6; /* Improve readability */
  text-align: left; /* Ensure text is left-aligned inside the block */
}

/* Progress bar */
.progress {
  animation-timeline: scroll(root);
  animation-name: scaleProgress;
  animation-duration: auto;
  animation-timing-function: linear;
  height: 0.5rem;
  background: var(--azure);
  position: fixed;
  /* Progress bar stays on top of the nav bar, at the bottom of it. */
  top: 4rem;
  left: 0;
  width: 100%;
  transform-origin: 0 50%;
  z-index: 2000;
}
@keyframes scaleProgress {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

